<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.operations.MainActivity" >

    <item
        android:id="@+id/action_abrirImagem"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_abrirImagem"/>

    <item
        android:id="@+id/action_desenhar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_desenhar"/>
    
    <item
        android:id="@+id/action_warp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_warp"/>
    
    <item
        android:id="@+id/action_morph"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_morph"/>
    <item
        android:id="@+id/action_morph_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_morph_save"/>
</menu>
